--- a/index.html
+++ b/index.html
@@ -667,9 +667,10 @@
                 ] 
             },
             '2025-07-07': { 
-                hours: 0, 
+                hours: 3.7, 
                 activities: [
-                    "День отдыха"
+                    "Читал о речи анализа",
+                    "Практиковал векторное доказательство"
                 ] 
             },
             '2025-07-10': { 
