--- a/index.html
+++ b/index.html
@@ -667,10 +667,11 @@
                 ] 
             },
             '2025-07-07': { 
-                hours: 3.7, 
+                hours: 4.7, 
                 activities: [
                     "Читал о речи анализа",
-                    "Практиковал векторное доказательство"
+                    "Практиковал векторное доказательство",
+                    " Сыграл прак раунд"
                 ] 
             },
             '2025-07-10': { 
