--- a/index.html
+++ b/index.html
@@ -673,6 +673,14 @@
                     "Практиковал векторное доказательство",
                     " Сыграл прак раунд"
                 ] 
+             },
+            '2025-07-08': { 
+                hours: 3.2, 
+                activities: [
+                    "Сыграл прак раунд",
+                    "Прочитал пару статей",
+                    "Практиковал векторное доказательство"
+                ] 
             },
             '2025-07-10': { 
                 hours: 0, 
