--- a/index.html
+++ b/index.html
@@ -682,6 +682,13 @@
                     "Практиковал векторное доказательство"
                 ] 
             },
+            '2025-07-09': { 
+                hours: 2.8, 
+                activities: [
+                    "Разбирал резы",
+                    "Читал статьи"
+                ] 
+            },
             '2025-07-10': { 
                 hours: 0, 
                 activities: [
