--- a/index.html
+++ b/index.html
@@ -690,9 +690,10 @@
                 ] 
             },
             '2025-07-10': { 
-                hours: 0, 
+                hours: 1.5, 
                 activities: [
-                    "День отдыха"
+                    "Смотрел разбор игры",
+                    "Разбирал векторы"
                 ] 
             },
             '2025-07-15': { 
